<resources>
    <string name="app_name">Log Management</string>
    <string name="settings_name">Log Management Settings</string>
    <string name="LoginDescription">Please enter your login details to connect to the network.</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_ftp_host_settings">192.158.0.10</string>
    <string name="pref_title_ftp_host_settings">FTP Host</string>

    <string name="pref_ftp_port_settings">21</string>
    <string name="pref_title_ftp_port_settings">Port</string>

    <string name="pref_ftp_user_settings">timbersmart</string>
    <string name="pref_title_ftp_user_settings">UserName</string>

    <string name="pref_ftp_password_settings">t1mber</string>
    <string name="pref_title_ftp_password_settings">Password</string>

    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_display_name">Display name</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">DB settings</string>

    <string name="pref_db_host_settings">10.2.0.0</string>
    <string name="pref_title_db_host_settings">Host</string>

    <string name="pref_db_port_settings">1433</string>
    <string name="pref_title_db_port_settings">Port</string>

    <string name="pref_db_instance_settings">timbersmart</string>
    <string name="pref_title_db_instance_settings">DB</string>

    <string name="pref_db_user_settings">timbersmart</string>
    <string name="pref_title_db_user_settings">User</string>

    <string name="pref_db_password_settings"></string>
    <string name="pref_title_db_password_settings">Password</string>
</resources>
