<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_ftp_host_settings"
        android:inputType="textCapWords"
        android:key="txtHostSettings"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ftp_host_settings" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_ftp_port_settings"
        android:inputType="textCapWords"
        android:key="txtPortSettings"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ftp_port_settings" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_ftp_user_settings"
        android:inputType="textCapWords"
        android:key="txtUserSettings"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ftp_user_settings" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_ftp_password_settings"
        android:inputType="textPassword"
        android:key="txtPasswordSettings"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ftp_password_settings" />
</PreferenceScreen>